--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,101 @@
-* { /* add reset to all items*/
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
- 
+
+body {
+    height: 100vh;
+    display: flex;
+    font-size: 16px;
+    background: linear-gradient(90deg, #000, #0c002b);
+    /*background: linear-gradient(90deg, #000, #0c002b);
+    /* Fundo escuro */
+    flex-direction: column;
+    /* Adicionado para alinhar o header acima do memory-game */
+
+}
+
+header {
+    background: linear-gradient(90deg, #000, #0c002b);
+    /* Fundo escuro */
+    text-align: center;
+    padding: 20px;
+}
+
+.game-title {
+    color: white;
+    font-family: 'Arial', sans-serif;
+    /* Altere para uma fonte que você prefira, talvez algo mais futurístico ou espacial */
+    font-size: 36px;
+    /* Tamanho da fonte */
+    text-shadow: 2px 2px 4px rgba(179, 150, 166, 0.9);
+    /* Adiciona uma sombra ao texto para efeito espacial */
+    letter-spacing: 2px;
+    /* Espaçamento entre as letras */
+    margin-bottom: 10px;
+    /* Margem inferior para afastar do restante do conteúdo */
+}
+
+.memory-game {
+    width: 540px;
+    height: 540px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    perspective: 1000px;
+}
+
+.memory-card {
+    width: 200px;
+    height: 270px;
+    /*width: calc(25% - 0px);
+  height: calc(33.333% - 5px);*/
+    margin: 10px;
+    position: auto;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .0);
+    border-radius: 10px;
+}
+
+.memory-card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
+}
+
+.front-face,
+.back-face {
+    width: 100%;
+    height: 100%;
+    padding: .5px;
+    position: absolute;
+    border-radius: 5px;
+    background-color: rgb(239, 245, 245);
+    backface-visibility: hidden;
+    /*hidden para esconder o backface*/
+}
+
+
+.front-face {
+    transform: rotateY(180deg);
+}
+
+/* Estilos para tablets em orientação retrato ou pequenos desktops */
+@media (max-width: 768px) {
+    body {
+      font-size: 14px;
+    }
+  }
+  
+  /* Estilos para celulares */
+  @media (max-width: 480px) {
+    body {
+      font-size: 12px;
+    }
+  }
