--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ header {
 }
 
 .memory-card.flip {
-    transform: rotateY(180deg);
+    transform: rotateY(180deg); /*rotate foi utlizado p/ a carta rodar*/
 }
 
 .front-face,
