--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,25 @@ header {
     transform: rotateY(180deg);
 }
 
+.win-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color: #000000;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 1;
+}
+
+.win-message.show {
+    opacity: 1;
+}
+
 /* Estilos para tablets em orientação retrato ou pequenos desktops */
 @media (max-width: 768px) {
     body {
